Add version 1.2.0 to the release history of the README

--- a/README.org
+++ b/README.org
@@ -24,6 +24,7 @@ The servlet has been written as a microservice that can be installed into an [[h
 
 | Version | Date             | Description                                                                                 |
 |---------+------------------+---------------------------------------------------------------------------------------------|
+|   1.2.0 | <2020-04-20 Mon> | Use jackson-databind 2.9.10.3, make liquibase script work with h2                           |
 |   1.1.0 | <2019-11-14 Thu> | Use pax-jdbc-config to set up the database, build with openjdk 11, jackson security upgrade |
 |   1.0.0 | <2017-12-18 Mon> | First release                                                                               |
 
