--- a/README.org
+++ b/README.org
@@ -24,6 +24,7 @@ The servlet has been written as a microservice that can be installed into an [[h
 
 | Version | Date             | Description                                                                                 |
 |---------+------------------+---------------------------------------------------------------------------------------------|
+|   1.3.3 | <2021-03-21 Sun> | Get maven dependencies from the karaf 4.2.11 BoM                                            |
 |   1.3.2 | <2020-10-10 Sat> | Use PostgreSQL JDBC driver 42.2.17                                                          |
 |   1.3.1 | <2020-09-26 Sat> | Use PostgreSQL JDBC driver 42.2.12                                                          |
 |   1.3.0 | <2020-07-24 Fri> | Remove use of cobertura, upgrade liquibase from 3.5.3 to 3.8.0                              |
