--- a/README.org
+++ b/README.org
@@ -24,6 +24,7 @@ The servlet has been written as a microservice that can be installed into an [[h
 
 | Version | Date             | Description                                                                                 |
 |---------+------------------+---------------------------------------------------------------------------------------------|
+|   1.4.6 | <2021-07-25 Sun> | Use PostgreSQL JDBC driver 42.2.23                                                        |
 |   1.4.5 | <2021-06-15 Tue> | Use jackson 12.3                                                                            |
 |   1.4.4 | <2021-06-13 Sun> | Align dependency versions with other applications                                           |
 |   1.4.3 | <2021-06-01 Tue> | Get versions for the OSGi 7 framework and the OSGi compendium from the karaf BoM            |
