--- a/README.org
+++ b/README.org
@@ -24,6 +24,7 @@ The servlet has been written as a microservice that can be installed into an [[h
 
 | Version | Date             | Description                                                                                 |
 |---------+------------------+---------------------------------------------------------------------------------------------|
+|   1.5.3 | <2022-08-10 Wed> | Use postgresql jdbc driver 42.4.1                                                           |
 |   1.5.2 | <2022-07-25 Mon> | Use karaf 4.4.1                                                                             |
 |   1.5.1 | <2022-05-31 Tue> | Use jackson jackson 2.13.3 to fix security issue                                            |
 |   1.5.0 | <2022-05-29 Sun> | Use karaf 4.4.0 and OSGi 8                                                                  |
