--- a/README.org
+++ b/README.org
@@ -36,6 +36,7 @@ The servlet has been written as a microservice that can be installed into an [[h
 
 | Version | Date             | Description                                                                                 |
 |---------+------------------+---------------------------------------------------------------------------------------------|
+|  1.5.19 | <2023-10-31 Tue> | Use karaf 4.4.4                                                                             |
 |  1.5.18 | <2023-07-30 Sun> | Use liquibase 2.15.2                                                                        |
 |  1.5.17 | <2023-07-08 Sat> | Use Java 17                                                                                 |
 |  1.5.16 | <2023-07-02 Sun> | Use liquibase 4.23.0                                                                        |
