--- a/README.org
+++ b/README.org
@@ -36,6 +36,7 @@ The servlet has been written as a microservice that can be installed into an [[h
 
 | Version | Date             | Description                                                                                 |
 |---------+------------------+---------------------------------------------------------------------------------------------|
+|  1.5.23 | <2024-03-02 Sat> | Use postgresql JDBC 42.7.2                                                                  |
 |  1.5.22 | <2023-12-14 Thu> | Use postgresql JDBC 42.7.1 and mockito 5.8.0                                                |
 |  1.5.21 | <2023-12-12 Tue> | Use liquibase 4.24.0                                                                        |
 |  1.5.20 | <2023-11-05 Sun> | Use jackson 2.15.3, junit jupiter 5.10.0, and mockito 5.7.0                                 |
