--- a/README.org
+++ b/README.org
@@ -36,6 +36,7 @@ The servlet has been written as a microservice that can be installed into an [[h
 
 | Version | Date             | Description                                                                                 |
 |---------+------------------+---------------------------------------------------------------------------------------------|
+|  1.5.31 | <2025-02-19 Wed> | Use liquibase 4.31.0                                                                        |
 |  1.5.30 | <2025-02-12 Wed> | Build with karaf 4.4.7, postgresql jdbc 42.7.5                                              |
 |  1.5.29 | <2024-12-14 Sat> | Use liquibase 4.30.0, postgresql jdbc 42.7.4                                                |
 |  1.5.28 | <2024-08-03 Sat> | Use jackson 2.17.2                                                                          |
