--- a/README.org
+++ b/README.org
@@ -36,6 +36,7 @@ The servlet has been written as a microservice that can be installed into an [[h
 
 | Version | Date             | Description                                                                                 |
 |---------+------------------+---------------------------------------------------------------------------------------------|
+|  2.5.33 | <2025-06-14 Sat> | Built for java 21, use postgresql 42.7.7                                                    |
 |  2.5.32 | <2025-04-05 Sat> | Use liquibase 4.31.1 (version number mistake in release:prepare, sorry!)                    |
 |  1.5.31 | <2025-02-19 Wed> | Use liquibase 4.31.0                                                                        |
 |  1.5.30 | <2025-02-12 Wed> | Build with karaf 4.4.7, postgresql jdbc 42.7.5                                              |
